# YourWeather

./: .gitignore  pyproject.toml
src/yourweather/: config.py  main.py
src/yourweather/app/: handlers.py  keyboards.py  scheduler.py  weather_service.py
src/yourweather/app/database/: models.py  requests.py
