[project]
name = "myweather"
version = "0.1.0"
description = ""
authors = [
    {name = "W1-user",email = "wolframgit@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "aiogram (>=3.29.0,<4.0.0)",
    "asyncio (>=4.0.0,<5.0.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "apscheduler (>=3.11.3,<4.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "logging (>=0.4.9.6,<0.5.0.0)",
    "psycopg-binary (>=3.3.4,<4.0.0)",
    "requests (>=2.34.2,<3.0.0)",
    "psycopg (>=3.3.4,<4.0.0)",
    "greenlet (>=3.5.3,<4.0.0)"
]

[tool.poetry]
packages = [{include = "yourweather", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
